--- a/bedrock/firefox/templates/firefox/new/scene1.html
+++ b/bedrock/firefox/templates/firefox/new/scene1.html
@@ -141,7 +141,7 @@
       <section class="section-current-platform">
         {# L10n: span's below are for visual formatting and line break. #}
         <h4 class="heading-windows">{{_('Download Firefox <span>for Windows</span>') }}</h4>
-        <h4 class="heading-osx">{{_('Download Firefox <span>for OS X</span>') }}</h4>
+        <h4 class="heading-osx">{{_('Download Firefox <span>for macOS</span>') }}</h4>
         <h4 class="heading-linux">{{_('Download Firefox <span>for Linux</span>') }}</h4>
 
         {{ download_firefox(dom_id='download-other-platforms-modal', alt_copy=_('Free Download')) }}
