[fix bug 1332677] Fix CSS linting errors for styleguide

--- a/media/css/styleguide/identity-firefox.less
+++ b/media/css/styleguide/identity-firefox.less
@@ -239,8 +239,8 @@
             position: absolute;
             top: 0;
             right: 75px;
-            background: url(/media/img/styleguide/download-arrow.png) center right no-repeat;
-            padding-right: 40px
+            background: url("/media/img/styleguide/download-arrow.png") center right no-repeat;
+            padding-right: 40px;
         }
     }
     .clear {
