--- a/media/css/styleguide/products-firefox-os.less
+++ b/media/css/styleguide/products-firefox-os.less
@@ -22,7 +22,7 @@
             width: 40px;
             top: 0;
             left: 0;
-            background: transparent url(/media/img/styleguide/products/firefoxos/ol-list.png) no-repeat 0 0;
+            background: transparent url("/media/img/styleguide/products/firefoxos/ol-list.png") no-repeat 0 0;
         }
         li:nth-child(2):before {
             background-position: 0 -47px;
@@ -179,12 +179,12 @@
                         .span_guide(2);
                         margin-right: 0;
                         padding-top: 15px;
-                        li {
-                            list-style-type: none;
-                            margin-left: 0;
-                            .font-size(@smallFontSize);
-                            color: @darkThemeText;
-                        }
+                    }
+                    div li {
+                        list-style-type: none;
+                        margin-left: 0;
+                        .font-size(@smallFontSize);
+                        color: @darkThemeText;
                     }
                 }
             }
@@ -491,24 +491,51 @@
         #swatch_000000 .swatch span { background-color: #000000; }
         #swatch_333333 .swatch span { background-color: #333333; }
         #swatch_2c393b .swatch span { background-color: #2c393b; }
-        #swatch_f4f4f4 .swatch span { background-color: #f4f4f4; color: #000; }
-        #swatch_eaeae7 .swatch span { background-color: #eaeae7; color: #000; }
+        #swatch_f4f4f4 .swatch span {
+            background-color: #f4f4f4;
+            color: #000;
+        }
+        #swatch_eaeae7 .swatch span {
+            background-color: #eaeae7;
+            color: #000;
+        }
         #swatch_000000 .swatch span { background-color: #000000; }
         #swatch_333333 .swatch span { background-color: #333333; }
         #swatch_4d4d4d .swatch span { background-color: #4d4d4d; }
         #swatch_5f5f5f .swatch span { background-color: #5f5f5f; }
         #swatch_858585 .swatch span { background-color: #858585; }
         #swatch_a6a6a6 .swatch span { background-color: #a6a6a6; }
-        #swatch_c7c7c7 .swatch span { background-color: #c7c7c7; color: #000; }
-        #swatch_e7e7e7 .swatch span { background-color: #e7e7e7; color: #000; }
-        #swatch_eeeeee .swatch span { background-color: #eeeeee; color: #000; }
-        #swatch_f4f4f4 .swatch span { background-color: #f4f4f4; color: #000; }
-        #swatch_ffffff .swatch span { background-color: #ffffff; color: #000; }
-        #swatch_eaeae7 .swatch span { background-color: #eaeae7; color: #000; }
+        #swatch_c7c7c7 .swatch span {
+            background-color: #c7c7c7;
+            color: #000;
+        }
+        #swatch_e7e7e7 .swatch span {
+            background-color: #e7e7e7;
+            color: #000;
+        }
+        #swatch_eeeeee .swatch span {
+            background-color: #eeeeee;
+            color: #000;
+        }
+        #swatch_f4f4f4 .swatch span {
+            background-color: #f4f4f4;
+            color: #000;
+        }
+        #swatch_ffffff .swatch span {
+            background-color: #ffffff;
+            color: #000;
+        }
+        #swatch_eaeae7 .swatch span {
+            background-color: #eaeae7;
+            color: #000;
+        }
         #swatch_008eab .swatch span { background-color: #008eab; }
         #swatch_00aacc .swatch span { background-color: #00aacc; }
         #swatch_00caf2 .swatch span { background-color: #00caf2; }
-        #swatch_b2f2ff .swatch span { background-color: #b2f2ff; color: #000; }
+        #swatch_b2f2ff .swatch span {
+            background-color: #b2f2ff;
+            color: #000;
+        }
         #swatch_820000 .swatch span { background-color: #820000; }
         #swatch_b90000 .swatch span { background-color: #b90000; }
         #swatch_ff4e00 .swatch span { background-color: #ff4e00; }
