--- a/media/css/styleguide/styleguide-lib.less
+++ b/media/css/styleguide/styleguide-lib.less
@@ -9,12 +9,12 @@
 .divider() {
     padding-bottom: @baseLine * 3;
     margin-bottom: @baseLine * 2;
-    background: url(/media/img/styleguide/divider.png) 50% 100% no-repeat;
+    background: url("/media/img/styleguide/divider.png") 50% 100% no-repeat;
 }
 
 .divider-dark() {
     .divider();
-    background-image: url(/media/img/styleguide/divider-dark.png);
+    background-image: url("/media/img/styleguide/divider-dark.png");
 }
 
 /* {{{ Grid setup */
